--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vnda-front-end-challenge-junior",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://ayrton-silva.github.io/vnda-front-end-challenge-junior",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +17,6 @@
   "bugs": {
     "url": "https://github.com/ayrton-silva/vnda-front-end-challenge-junior/issues"
   },
-  "homepage": "https://github.com/ayrton-silva/vnda-front-end-challenge-junior#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
